--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,11 @@ github_username:  jekyll
 time_zone: America/Chicago
 
 # Build settings
-theme: minima
+theme: minima 
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
