--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,8 @@ comments: #** come back to this later **#
     issue_term           : # "pathname" (default)
   staticman:
     branch               : "master"
-    endpoint             : # "https://{your Staticman v3 API}/v3/entry/github/"
+    endpoint             : "https://{your Staticman v3 API}/v3/entry/github/karenlai0222/karenlai0222.github.io"
+
 reCaptcha: #** come back to this later **#
   siteKey                :
   secret                 :
@@ -276,6 +277,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
