--- a/_config.yml
+++ b/_config.yml
@@ -280,7 +280,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: true
+      comments: false
       share: true
       related: true
   # _pages
